--- a/templates/actor/items.hbs
+++ b/templates/actor/items.hbs
@@ -7,7 +7,8 @@
   {{! Editors must receive enriched text data from getData to properly handle rolls, UUID links, etc. }}
   {{#if editable}} 
     <prose-mirror name="system.items" data-document-u-u-i-d="{{actor.uuid}}" value="{{system.items}}" collaborate="true" toggled="true">
+      {{{enrichedItems}}}
     </prose-mirror>
-  {{else}} 
+  {{else}} {{{enrichedItems}}}
   {{/if}}
 </section>
