--- a/templates/actor/themebooks.hbs
+++ b/templates/actor/themebooks.hbs
@@ -9,16 +9,16 @@
             <label for="system.themebooks.{{key}}.basicMove" class="resource-label">Basic Move:</label>
               {{#if editable}} 
                 <prose-mirror name="system.themebooks.{{key}}.basicMove" data-document-u-u-i-d="{{actor.uuid}}" value="{{this.basicMove}}" collaborate="true" toggled="true">
-                  {{{add "enrichedBasicMove" modifier=@index}}}
+                  {{{lookup . (add "enrichedBasicMove" modifier=@index)}}}
                 </prose-mirror>
-            {{else}} {{{add "enrichedBasicMove" modifier=@index}}}
+            {{else}} {{{lookup . (add "enrichedBasicMove" modifier=@index)}}}
             {{/if}}
             <label for="system.themebooks.{{key}}.abilityList" class="resource-label">Abilities</label>
             {{#if editable}} 
                 <prose-mirror name="system.themebooks.{{key}}.abilityList" data-document-u-u-i-d="{{actor.uuid}}" value="{{this.abilityList}}" collaborate="true" toggled="true">
-                  {{{add "enrichedAbilityList" modifier=@index}}}
+                  {{{lookup . (add "enrichedAbilityList" modifier=@index)}}}
                 </prose-mirror>
-            {{else}} {{{add "enrichedAbilityList" modifier=@index}}}
+            {{else}} {{{lookup . (add "enrichedAbilityList" modifier=@index)}}}
             {{/if}}
           </div>
         {{/each}}
